fixed whitespace on sides of intro page

--- a/src/intro.css
+++ b/src/intro.css
@@ -1,36 +1,49 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:700,900");
 
+body {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+  }
+
 #modal {
+  position: fixed;
+  left: 50%;
   background: radial-gradient(#fff, #aaa);
+  background-position: center;
   overflow: hidden;
   height: 100vh;
   width: 100vw;
-  padding-top: 40vh;
-  transform: scale(1.2);
+  /* padding-top: 40vh; */
+  transform: translate(-50%, 0%) scale(1.3);
 }
 
 .txt {
-  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  /* text-align: center; */
   font-family: "Roboto";
   font-size: 12vmin;
   font-weight: 700;
   color: #e90418;
-  animation: netflix_style 3.5s forwards;
+  animation: netflix_style 3.5s;
   border: none;
   white-space: nowrap;
   text-shadow: 10px 10px 20px #aaa;
+  transform: translate(-50%, -50%);
 }
 
 @keyframes netflix_style {
   0% {
     text-shadow: 30px 30px 5px #aaa;
     color: #f3f3f3;
-    transform: scale(1.5, 1.5);
+    transform: translate(-50%, -50%) scale(1.4, 1.4);
   }
   10% {
     text-shadow: 10px 15px 5px #aaa;
     color: #f3f3f3;
-    transform: scale(1.5, 1.5);
+    transform: translate(-50%, -50%) scale(1.4, 1.4);
   }
   15% {
     color: #f3f3f3;
@@ -38,7 +51,7 @@
   20% {
     color: #e90418;
     text-shadow: none;
-    transform: scale(1.1, 1.1);
+    transform: translate(-50%, -50%) scale(1.1, 1.1);
   }
   75% {
     opacity: 1;
@@ -46,7 +59,7 @@
   80% {
     opacity: 0;
     color: #e90418;
-    transform: scale(0.85, 0.9);
+    transform: translate(-50%, -50%) scale(0.85, 0.9);
   }
 
   100% {
